@@ -54,8 +54,7 @@ void NextWindowCmd::execute() {
             else {
                 // if stacked cycling, then set a watch for
                 // the release of exactly these modifiers
-                if (screen != fb->watchingScreen())
-                    Fluxbox::instance()->watchKeyRelease(*screen, mods);
+                Fluxbox::instance()->watchKeyRelease(*screen, mods);
                 screen->focusControl().nextFocus(m_option);
             }
         } else
@@ -76,8 +75,7 @@ void PrevWindowCmd::execute() {
             else {
                 // if stacked cycling, then set a watch for
                 // the release of exactly these modifiers
-                if (screen != fb->watchingScreen())
-                    Fluxbox::instance()->watchKeyRelease(*screen, mods);
+                Fluxbox::instance()->watchKeyRelease(*screen, mods);
                 screen->focusControl().prevFocus(m_option);
             }
         } else
